--- a/widgets/videoindexer/style.css
+++ b/widgets/videoindexer/style.css
@@ -1,11 +1,21 @@
 .video-img {
     display: inline-block;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border-radius: 50%;
+    -webkit-user-select: none;
+}
+
+.video-img-rot {
+    display: inline-block;
     width: 50px;
     height: 50px;
     overflow: hidden;
     border-radius: 50%;
     margin: 4%;
     -webkit-animation: rotation 1s infinite linear;
+    cursor: pointer;
 }
 
 @-webkit-keyframes rotation {
